# algorithmInC

./: CMakeLists.txt  main0.c
common/: utils.c  utils.h
dataStruct/graph/basic/dg/: list_dg.c  matrix_dg.c
dataStruct/graph/basic/udg/: list_udg.c  matrix_udg.c
dataStruct/linear/basic/doubleLinkedList/: doubleLinkedList.c  doubleLinkedList.h
dataStruct/linear/basic/sequenceList/: sList.c  sList.c.c  sList.h
dataStruct/linear/basic/single_link_list/: sLink.c  sLink.h  sLinkTest.c
dataStruct/linear/queue/: queue.c  queue.h
dataStruct/linear/stack/: stack.c  stack.h
dataStruct/map/: graphDef.c
dataStruct/tree/: BiTree.c  BiTree.h
serach/: staticSerach.c
sort/insertSort/: insertSort.c
sort/swapSort/: swapSort.c
test/: test.c
